*sqlite-3.33.0
::prototype99	remove backports and workaround, update patches, add more urls for info, improve doc use flag handling
*sqlite-3.32.3-r1
::gentoo		update keywords, add features, update ebuild
::prototype99	remove 9999 code
*sqlite-3.31.1
::oubliette		base ebuild
::prototype99	uncomment patch