@@ -10,14 +10,18 @@ AUX sqlite-3.33.0-build_2.2.patch 11986 BLAKE2B 27cd42308436d5708771c11d08546435
 DIST sqlite-autoconf-3310100.tar.gz 2887243 BLAKE2B ef5d40b6e6c59a51ae95368eb9f6a938188813f89d5328ea1c1180ef35f124c14b3e83b0832ae5c2fa24cc2df352f1b0ea5f20b64d0762d50a700d9895f9a12e SHA512 d85250ba5f78f0c918880f663741709aba662192f04888b2324a0df17affdf5b8540e8428c6c7315119806e7adad758ea281c9b403c0ad94ac6a9bd1b93fd617
 DIST sqlite-autoconf-3320300.tar.gz 2904404 BLAKE2B 23c75256f31bd24ca14949afd144ac3280dcaaf25301ffcb8b9ecea6834fce9b1aee603ef616c2987674ae30afb59326c6f2010870b075f7d4c6566a2329f155 SHA512 add0ef47c059be0a75add7ab4fe52b2fbd4060cacbf1cbb93f1b4007cdeb8fc92256b1aadc224c4839e733fb868e56d9d73dd33c56a6f66180d1ff001d8d275e
 DIST sqlite-autoconf-3330000.tar.gz 2913759 BLAKE2B 73801aef8e035e2b23424ae7e8af76a2cd9b861dcbeeb81c7d4809ebe44944cb1eda531378f0901c423df1f8bc9e79abb1f385a17601a136982197b9732d5a01 SHA512 c0d79d4012a01f12128ab5044b887576a130663245b85befcc0ab82ad3a315dd1e7f54b6301f842410c9c21b73237432c44a1d7c2fe0e0709435fec1f1a20a11
+DIST sqlite-autoconf-3340000.tar.gz 2930085 BLAKE2B c9159502b72614122870fde2143f6d2f9cc503420737b1b393a87db6ad200bbf3f9adcc2902057cd8b723e995ec7c7b596cdd82d6fe8feb133c9cd4321263bf6 SHA512 75a1a2d86ab41354941b8574e780b1eae09c3c01f8da4b08f606b96962b80550f739ec7e9b1ceb07bba1cedced6d18a1408e4c10ff645eb1829d368ad308cf2f
 DIST sqlite-doc-3310100.zip 9600405 BLAKE2B 324fb7a0a38bc56476e41504c14996e9d5d83ac659403991515413d49f5ee3aad064ccece25f52b6041ef26bf23f320a9be1b6b02c5fbe96c36372107f54fc2e SHA512 5572e2c2dac30c014ef9cd60a620b7a7bb610f91a47e2890c0641540d39b9d5ce0e914ee697583130317633918b7827e2612a7cbc024f5bd6aa22ad28a78b56b
 DIST sqlite-doc-3320300.zip 9772933 BLAKE2B efd72c18d0398c103e3f9c4cfeb03e7794fd69691b1bcea95b74a0c5d8af22aa13abc84ce8dc5864b5f4cb79be239433933b4daca34d1adfcc6f31ce2cde66bf SHA512 af9dca970b4c03c058d7d1cd55a3d11fa4b112dccac942b8660d82a7e9ba2956963fcb429eedfdc85915637c102e1f904ace98c8e0455c4120422bbd9f2f3cd0
 DIST sqlite-doc-3330000.zip 9834159 BLAKE2B f67155a8ce8e46c2fbc0a4e35722d1fcad86e905a15230adc70732cee267b6b2002c7499883b938129aaa908b99634e4214360e9d1dbdae333b09060de24530e SHA512 14a3cccb4ff6af57738990eeadd37a1b827f89c9c1b16201c62ca5bb9301d39223d48677b9c269ce332210e5c9ae3f42aa0f9de7d79b38acb9809c732d038368
+DIST sqlite-doc-3340000.zip 10069888 BLAKE2B 343df62bc8b75d57dffe69c779cceb856d9e94a5b2a77c3a972761eedd8b4b0f5f8849102ec271652c3aa4039df75d7f2e503fd04b0547be03e024fdfbd894ac SHA512 1bdf20030e656ec4ce38a264c8ef7a95c9f2731cd7d756a44b35b6c68827e8aba92018007139ee09d1c27b34bcd72bff1a201dc3f30aa13e96120af5d58e835e
 DIST sqlite-src-3310100.zip 12510166 BLAKE2B a856695e8552b8b4dcb28452fdbd48305fdb9072f9d6587f4b1f4445daf386e920eb936dcb50fdfe41a49f84b26a7c5fedcffea5acf3ba3fa935c36695d4b8ee SHA512 af92a00877bcd90372d6f83a27fea12b4fe8d1155b223a6bccbccc31bb8e3d2269cd9e68f329bc55f70d1068ccbf220ff5abccea6f593fd7a3a4bdd732d1cdbe
 DIST sqlite-src-3320300.zip 12461750 BLAKE2B 59cce74d284191cfc69ac09b6014701ddd2b7b3d7ebaad5da4ad71cc200e70285b3b201ff174819aa8dde5f610589d7947f547450334f0f17149014078316185 SHA512 7e027c7163a760fb9b6dbfd2e4ccffb39d4972280583fb0d7f8390017101dfed3b12a36653b3130a548ae4d04c6abb11c0a1921b6f09c54c6ae1e72fbdcb2fd4
 DIST sqlite-src-3330000.zip 12591089 BLAKE2B 14888bca229683e97c4666f8efb535be5bd3e322de0089f0175ba15e038016be3a3cc00b5bfa8c111538116914cf6d8439839ca5d1e20339b184e547ddf260a4 SHA512 3260e3e03ee2f6a4ff2bc4ea4bada5a1497afeca33878c155a8005824970c6c1eb8a2db58eb3023cab084af475fadb81d1c3c9892ae92c07f884881e6602e173
+DIST sqlite-src-3340000.zip 12623425 BLAKE2B 548293cf0166407727cd068804eb5e1ce62f654533c88a87b71a6ff62da37eb2af21b89b8d63ee677777ca917e0d685ddcf9b8d5c3c8b2a2b787d71da8e5a161 SHA512 520fbca59da02452e2861a140bde891aedfc8254eafaa6894e8d845369d60d6a921595a411efb2611c0f7b0cadd69a713dcdaaeaad1e4254e9fd9a6efde07f91
 EBUILD sqlite-3.31.1.ebuild 11642 BLAKE2B 8d57d76a76eb3e07fb9e983b7ed2925dfa2d2d631b07572cfcdd4b4767811b477a9d8d36cca5c49903dbd17af86e220b125f65219e9c9165175c017c4c49f59d SHA512 e505e76278f6c1c9eb8b71afdd6bd178bf50e81615d1aab8451b1547a393135e410c92127d7615e4b4a5aa43348f5ef5a6b07d34c951613c161496297ef3d467
 EBUILD sqlite-3.32.3-r1.ebuild 9402 BLAKE2B b48f21f7d7a7def6925193764a90250ac9f5118297af9b21a4833eff38c550893ff6828c833717d5dcd6af1c0fa5f2ead8c1f085dd868da9cda2a76ee66fbdde SHA512 bad061d722893bab3aa49d3ce63846d27ae62a897175c9377bcb5fafb725e9be5385804fe4b11a0e67479afc8343e72fddf23e7017f87df67800dbf0f8dbf3df
 EBUILD sqlite-3.33.0.ebuild 10553 BLAKE2B e36c0f6772ffd29fb3c9117e32b96fc383f270d0192b2057c0821699a56ba68a752fa0a9453c1f3c703e6fef5817d8080abbb09c7f7f17e8e5b4641bc5490a33 SHA512 205603e6cec2d6bc34c355ccfb1c4570f8d6a23d7b73bb5ce94229d552505332c26f4f37025aa515bb160f84c75c2db42ccb801e610e42817434c98ff1e14f69
-MISC ChangeLog 305 BLAKE2B 9e1c91ba0df2939bb5e89acaebad8cd036c094b581d9b804fa8e557a8195d8155c161ff643f5f357ca1748847906decffab476ac092259f956852b4bba708371 SHA512 8d13bd4056035752b85bbc5dc3db17e7b485a7e0288a034a1b159eb610b8e7311538a25f089661c186d5ada3cf8b9ecc832b91bfdfa1817806802814bf687bb2
+EBUILD sqlite-3.34.0.ebuild 10553 BLAKE2B e36c0f6772ffd29fb3c9117e32b96fc383f270d0192b2057c0821699a56ba68a752fa0a9453c1f3c703e6fef5817d8080abbb09c7f7f17e8e5b4641bc5490a33 SHA512 205603e6cec2d6bc34c355ccfb1c4570f8d6a23d7b73bb5ce94229d552505332c26f4f37025aa515bb160f84c75c2db42ccb801e610e42817434c98ff1e14f69
+MISC ChangeLog 380 BLAKE2B 005a88494e4aad89670f279395bd5666444f427018de559854e07beb110c33faf87af768ff909340ebdcd60aa86911b86b37cfdd5a5955d9947eae15e48523f5 SHA512 a49856c042e2968d65ab0a1c393ec0b6ab07b31af02d188206221400dd392500460647c4474734bfcafc9892d318fa673c6171b0ed71dbae62edeb33bf69822b
 MISC metadata.xml 824 BLAKE2B 6f8ec46c32f89c849de01ec2b8d6734ad04cda59b62d8cb55a93221ce125d1748d00bdc89c58dde772f9fcd63175b9d497845a0fb5174caa1c20b1334a65184a SHA512 56631e71beff616b89fd7b389187d0c0f100fc083aea1e7f2bddea7cd793962c88274119ca9c48ce84be162b45df25a1c19396a618bac7fc57c2ea9a4b278ef5
